chore: 切换为docker restart策略，移除外部守护脚本，简化自动重启配置

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,6 +43,7 @@ services:
     environment:
       - HF_TOKEN=${HF_TOKEN}
       - GENSYN_RESET_CONFIG=${GENSYN_RESET_CONFIG}
+    restart: always
 
   # Requires the NVIDIA Drivers version >=525.60.13 to be installed, as well
   # as the nvidia-container-toolkit.
@@ -73,3 +74,4 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+    restart: always
